--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <br />
 <center>Forgot a post?   Post an <a href="https://github.com/RemindUS/FreedomOP/issues/new">issue</a>!
 <br />
+<!-- All links belong below here! -->
+<!-- Please follow the format as is, and post the newest links at the top -->
 
 
 
