--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <center><b><font size="7">FreedomOP Post archives</font></b></center>
 <br />
 <center>Forgot a post?   Post an <a href="https://github.com/RemindUS/FreedomOP/issues/new">issue</a>!
-<br />
+<br /><p>
 <!-- All links belong below here! -->
 <!-- Please follow the format as is, and post the newest links at the top -->
+http://freedomop.boards.net/thread/1976 - August 16, 2014 at 08:17AM
 
 
-
-<br />
+</p><br />
 <footer>RemindUS - 2014</footer>
