--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <br /><p>
 <!-- All links belong below here! -->
 <!-- Please follow the format as is, and post the newest links at the top -->
-http://freedomop.boards.net/thread/1976 - August 16, 2014 at 08:17AM
-http://freedomop.boards.net/thread/2106 - August 19, 2014 at 07:53PM
+http://freedomop.boards.net/thread/1976 - August 16, 2014 at 08:17AM<br />
+http://freedomop.boards.net/thread/2106 - August 19, 2014 at 07:53PM<br />
 
 
 </p><br />
