--- a/www/contact/index.html
+++ b/www/contact/index.html
@@ -1,6 +1,40 @@
-<!--  To finish, not in the mood ATM -->
-
-
-
-<title>404</title>
-<h1>404</h1>
+<!DOCTYPE html>
+<!--  Work in progress -->
+<html>
+    <head>
+        <title>FreedomOP Forum Archives</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+    <body bgcolor="#FEFBF4">
+    <center><b><font size="7"><font color=#ff0000>F</font><font color=#f41f0a>r</font><font color=#e93f15>e</font><font color=#df5d1f>e</font><font color=#d47a2a>d</font><font color=#c99535>o</font><font color=#bfad3f>m</font><font color=#b4c34a>O</font><font color=#aad655>P</font> <font color=#94f16a>F</font><font color=#8afa74>o</font><font color=#7ffe7f>r</font><font color=#74fe8a>u</font><font color=#6afa94>m</font> <font color=#55e7aa>A</font><font color=#4ad8b4>r</font><font color=#3fc6bf>c</font><font color=#35b0c9>h</font><font color=#2a98d4>i</font><font color=#1f7ddf>v</font><font color=#1561e9>e</font><font color=#0a43f4>s</font></a></center></b></center>
+    <font size="5"><center><a href="./index/">Date Index</a> - <a href="./legal/">Legal Information</a> - <a href="./">Contact information</a></font></center>
+    <pre><font size="4"><center>
+        
+		
+http://freedomop.boards.net/thread/1976 - August 16, 2014 at 08:17AM
+http://freedomop.boards.net/thread/2106 - August 19, 2014 at 07:53PM
+http://freedomop.boards.net/thread/2107 - August 19, 2014 at 09:55PM
+http://freedomop.boards.net/thread/1656 - August 20, 2014 at 01:43AM        
+http://freedomop.boards.net/thread/32 - August 20, 2014 at 04:37AM
+http://freedomop.boards.net/thread/2109 - August 20, 2014 at 05:55AM
+http://freedomop.boards.net/thread/2111 - August 20, 2014 at 08:21AM
+http://freedomop.boards.net/thread/2112 - August 20, 2014 at 09:07AM
+http://freedomop.boards.net/thread/2113 - August 20, 2014 at 01:04PM
+http://freedomop.boards.net/thread/2114 - August 20, 2014 at 01:16PM
+http://freedomop.boards.net/thread/1730 - August 20, 2014 at 02:21PM
+http://freedomop.boards.net/thread/2119 - August 20, 2014 at 04:39PM
+http://freedomop.boards.net/thread/2121 - August 20, 2014 at 07:06PM
+        
+		
+		
+		
+		
+		
+		
+		
+		
+		
+    </pre></font></p></body>
+    <center><pre><font size="5"><footer><a href="https://github.com/RemindUS/FreedomOP">RemindUS - 2014</a></footer></font></pre></center>
+</html>
