--- a/www/index2.html
+++ b/www/index2.html
@@ -25,7 +25,8 @@ http://freedomop.boards.net/thread/2114 - August 20, 2014 at 01:16PM
 http://freedomop.boards.net/thread/1730 - August 20, 2014 at 02:21PM
 http://freedomop.boards.net/thread/2119 - August 20, 2014 at 04:39PM
 http://freedomop.boards.net/thread/2121 - August 20, 2014 at 07:06PM
-        
+http://freedomop.boards.net/thread/2124 - August 21, 2014 at 06:51AM
+
 		
 		
 		
