--- a/www/index2.html
+++ b/www/index2.html
@@ -26,7 +26,7 @@ http://freedomop.boards.net/thread/1730 - August 20, 2014 at 02:21PM
 http://freedomop.boards.net/thread/2119 - August 20, 2014 at 04:39PM
 http://freedomop.boards.net/thread/2121 - August 20, 2014 at 07:06PM
 http://freedomop.boards.net/thread/2124 - August 21, 2014 at 06:51AM
-
+http://freedomop.boards.net/thread/1964 - August 21, 2014 at 07:19AM
 		
 		
 		
