--- a/www/index2.html
+++ b/www/index2.html
@@ -28,6 +28,7 @@ http://freedomop.boards.net/thread/2121 - August 20, 2014 at 07:06PM
 http://freedomop.boards.net/thread/2124 - August 21, 2014 at 06:51AM
 http://freedomop.boards.net/thread/1964 - August 21, 2014 at 07:19AM
 http://freedomop.boards.net/thread/2126 - August 21, 2014 at 07:40AM
+http://freedomop.boards.net/thread/2125 - August 21, 2014 at 07:41AM
 		
 		
 		
