--- a/www/index2.html
+++ b/www/index2.html
@@ -32,7 +32,7 @@ http://freedomop.boards.net/thread/2125 - August 21, 2014 at 07:41AM
 http://freedomop.boards.net/thread/2127 - August 21, 2014 at 08:10AM
 http://freedomop.boards.net/thread/2128 - August 21, 2014 at 08:14AM
 http://freedomop.boards.net/thread/2129 - August 21, 2014 at 08:21AM		
-		
+http://freedomop.boards.net/thread/2130 - August 21, 2014 at 09:50AM
 		
 		
 		
