--- a/www/index2.html
+++ b/www/index2.html
@@ -34,6 +34,7 @@ http://freedomop.boards.net/thread/2128 - August 21, 2014 at 08:14AM
 http://freedomop.boards.net/thread/2129 - August 21, 2014 at 08:21AM		
 http://freedomop.boards.net/thread/2130 - August 21, 2014 at 09:50AM
 http://freedomop.boards.net/thread/2131 - August 21, 2014 at 10:07AM
+http://freedomop.boards.net/thread/2132 - August 21, 2014 at 11:17AM
 		
 		
 		
