--- a/www/index2.html
+++ b/www/index2.html
@@ -36,6 +36,7 @@ http://freedomop.boards.net/thread/2130 - August 21, 2014 at 09:50AM
 http://freedomop.boards.net/thread/2131 - August 21, 2014 at 10:07AM
 http://freedomop.boards.net/thread/2132 - August 21, 2014 at 11:17AM
 http://freedomop.boards.net/thread/2135 - August 21, 2014 at 04:09PM
+http://freedomop.boards.net/thread/2136 - August 21, 2014 at 04:29PM
 		
 		
 		
