--- a/www/index2.html
+++ b/www/index2.html
@@ -38,6 +38,7 @@ http://freedomop.boards.net/thread/2132 - August 21, 2014 at 11:17AM
 http://freedomop.boards.net/thread/2135 - August 21, 2014 at 04:09PM
 http://freedomop.boards.net/thread/2136 - August 21, 2014 at 04:29PM
 http://freedomop.boards.net/thread/1865 - August 22, 2014 at 12:39AM
+http://freedomop.boards.net/thread/2138 - August 22, 2014 at 01:21AM
 		
 		
 		
