--- a/www/index2.html
+++ b/www/index2.html
@@ -40,6 +40,7 @@ http://freedomop.boards.net/thread/2136 - August 21, 2014 at 04:29PM
 http://freedomop.boards.net/thread/1865 - August 22, 2014 at 12:39AM
 http://freedomop.boards.net/thread/2138 - August 22, 2014 at 01:21AM
 http://freedomop.boards.net/thread/2002 - August 22, 2014 at 04:15PM
+http://freedomop.boards.net/thread/2142 - August 22, 2014 at 04:17PM
 		
 		
 		
