--- a/www/index2.html
+++ b/www/index2.html
@@ -39,6 +39,7 @@ http://freedomop.boards.net/thread/2135 - August 21, 2014 at 04:09PM
 http://freedomop.boards.net/thread/2136 - August 21, 2014 at 04:29PM
 http://freedomop.boards.net/thread/1865 - August 22, 2014 at 12:39AM
 http://freedomop.boards.net/thread/2138 - August 22, 2014 at 01:21AM
+http://freedomop.boards.net/thread/2139 - August 22, 2014 at 04:52AM
 http://freedomop.boards.net/thread/2002 - August 22, 2014 at 04:15PM
 http://freedomop.boards.net/thread/2142 - August 22, 2014 at 04:17PM
 http://freedomop.boards.net/thread/1851 - August 22, 2014 at 04:24PM
