--- a/www/index2.html
+++ b/www/index2.html
@@ -46,6 +46,7 @@ http://freedomop.boards.net/thread/1851 - August 22, 2014 at 04:24PM
 http://freedomop.boards.net/thread/2143 - August 22, 2014 at 04:25PM
 http://freedomop.boards.net/thread/2144 - August 22, 2014 at 07:28PM
 http://freedomop.boards.net/thread/2146 - August 23, 2014 at 07:47AM
+http://freedomop.boards.net/thread/2147 - August 23, 2014 at 08:44AM
 		
 		
 		
