--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@ http://freedomop.boards.net/thread/2144 - August 22, 2014 at 07:28PM<br />
 http://freedomop.boards.net/thread/2146 - August 23, 2014 at 07:47AM<br />
 http://freedomop.boards.net/thread/2147 - August 23, 2014 at 08:44AM<br />
 http://freedomop.boards.net/thread/2153 - August 23, 2014 at 05:16PM<br />
+http://freedomop.boards.net/thread/2154 - August 23, 2014 at 05:51PM<br />
 
 
 </p><br />
