--- a/www/index2.html
+++ b/www/index2.html
@@ -48,6 +48,7 @@ http://freedomop.boards.net/thread/2144 - August 22, 2014 at 07:28PM
 http://freedomop.boards.net/thread/2146 - August 23, 2014 at 07:47AM
 http://freedomop.boards.net/thread/2147 - August 23, 2014 at 08:44AM
 http://freedomop.boards.net/thread/2153 - August 23, 2014 at 05:16PM
+http://freedomop.boards.net/thread/2154 - August 23, 2014 at 05:51PM
 		
 		
 		
