--- a/www/index2.html
+++ b/www/index2.html
@@ -52,6 +52,7 @@ http://freedomop.boards.net/thread/2154 - August 23, 2014 at 05:51PM
 http://freedomop.boards.net/thread/2155 - August 23, 2014 at 07:24PM
 http://freedomop.boards.net/thread/2156 - August 23, 2014 at 08:43PM
 http://freedomop.boards.net/thread/1917 - August 24, 2014 at 10:26AM
+http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM
 		
 		
 		
