--- a/www/index2.html
+++ b/www/index2.html
@@ -53,6 +53,7 @@ http://freedomop.boards.net/thread/2155 - August 23, 2014 at 07:24PM
 http://freedomop.boards.net/thread/2156 - August 23, 2014 at 08:43PM
 http://freedomop.boards.net/thread/1917 - August 24, 2014 at 10:26AM
 http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM
+http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM
 		
 		
 		
