--- a/www/index2.html
+++ b/www/index2.html
@@ -54,6 +54,7 @@ http://freedomop.boards.net/thread/2156 - August 23, 2014 at 08:43PM
 http://freedomop.boards.net/thread/1917 - August 24, 2014 at 10:26AM
 http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM
 http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM
+http://freedomop.boards.net/thread/2167 - August 24, 2014 at 08:16PM
 		
 		
 		
