--- a/www/index2.html
+++ b/www/index2.html
@@ -55,6 +55,7 @@ http://freedomop.boards.net/thread/1917 - August 24, 2014 at 10:26AM
 http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM
 http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM
 http://freedomop.boards.net/thread/2167 - August 24, 2014 at 08:16PM
+http://freedomop.boards.net/thread/2170 - August 25, 2014 at 07:01AM
 		
 		
 		
