--- a/www/index2.html
+++ b/www/index2.html
@@ -56,7 +56,8 @@ http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM
 http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM
 http://freedomop.boards.net/thread/2167 - August 24, 2014 at 08:16PM
 http://freedomop.boards.net/thread/2170 - August 25, 2014 at 07:01AM
-		
+http://freedomop.boards.net/thread/2173 - August 25, 2014 at 06:55PM
+
 		
 		
     </pre></font></p></body>
