--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@ http://freedomop.boards.net/thread/2162 - August 24, 2014 at 02:49PM<br />
 http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM<br />
 http://freedomop.boards.net/thread/2167 - August 24, 2014 at 08:16PM<br />
 http://freedomop.boards.net/thread/2170 - August 25, 2014 at 07:01AM<br />
+http://freedomop.boards.net/thread/2173 - August 25, 2014 at 06:55PM<br />
 
 
 </p><br />
