--- a/www/index2.html
+++ b/www/index2.html
@@ -57,6 +57,8 @@ http://freedomop.boards.net/thread/2166 - August 24, 2014 at 05:40PM
 http://freedomop.boards.net/thread/2167 - August 24, 2014 at 08:16PM
 http://freedomop.boards.net/thread/2170 - August 25, 2014 at 07:01AM
 http://freedomop.boards.net/thread/2173 - August 25, 2014 at 06:55PM
+http://freedomop.boards.net/thread/1873 - August 26, 2014 at 12:20AM
+
 
 		
 		
