--- a/www/index2.html
+++ b/www/index2.html
@@ -60,6 +60,7 @@ http://freedomop.boards.net/thread/2173 - August 25, 2014 at 06:55PM
 http://freedomop.boards.net/thread/1873 - August 26, 2014 at 12:20AM
 http://freedomop.boards.net/thread/2174 - August 26, 2014 at 03:54AM
 http://freedomop.boards.net/thread/2175 - August 26, 2014 at 11:34AM
+http://freedomop.boards.net/thread/2179 - August 26, 2014 at 04:10PM
 
 		
 		
