--- a/www/index2.html
+++ b/www/index2.html
@@ -64,6 +64,7 @@ http://freedomop.boards.net/thread/2179 - August 26, 2014 at 04:10PM
 http://freedomop.boards.net/thread/2182 - August 26, 2014 at 08:43PM
 http://freedomop.boards.net/thread/2183 - August 27, 2014 at 03:36AM
 http://freedomop.boards.net/thread/2184 - August 27, 2014 at 04:59AM
+http://freedomop.boards.net/thread/2185 - August 27, 2014 at 05:27AM
 
 		
 		
