--- a/www/index2.html
+++ b/www/index2.html
@@ -66,6 +66,7 @@ http://freedomop.boards.net/thread/2183 - August 27, 2014 at 03:36AM
 http://freedomop.boards.net/thread/2184 - August 27, 2014 at 04:59AM
 http://freedomop.boards.net/thread/2185 - August 27, 2014 at 05:27AM
 http://freedomop.boards.net/thread/1729 - August 27, 2014 at 11:03AM
+http://freedomop.boards.net/thread/2186 - August 27, 2014 at 12:01PM
 
 		
 		
