--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@ http://freedomop.boards.net/thread/2186 - August 27, 2014 at 12:01PM<br />
 http://freedomop.boards.net/thread/2187 - August 27, 2014 at 02:23PM<br />
 http://freedomop.boards.net/thread/2188 - August 27, 2014 at 02:33PM<br />
 http://freedomop.boards.net/thread/2191 - August 27, 2014 at 06:25PM<br />
+http://freedomop.boards.net/thread/2196 - August 28, 2014 at 01:05AM<br />
 
 
 </p><br />
