--- a/www/index2.html
+++ b/www/index2.html
@@ -71,6 +71,7 @@ http://freedomop.boards.net/thread/2187 - August 27, 2014 at 02:23PM
 http://freedomop.boards.net/thread/2188 - August 27, 2014 at 02:33PM
 http://freedomop.boards.net/thread/2191 - August 27, 2014 at 06:25PM
 http://freedomop.boards.net/thread/2196 - August 28, 2014 at 01:05AM
+http://freedomop.boards.net/thread/2197 - August 28, 2014 at 06:04AM
 
 		
 		
